--- a/ReactJS/lucy/package.json
+++ b/ReactJS/lucy/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "universal-cookie": "^2.0.7"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
