--- a/ReactJS/lucy/package.json
+++ b/ReactJS/lucy/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-ace": "^5.0.1",
     "jquery": "^3.2.1",
     "universal-cookie": "^2.0.7"
   },
