--- a/ReactJS/lucy/package.json
+++ b/ReactJS/lucy/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.5.4",
     "react-ace": "^5.0.1",
     "jquery": "^3.2.1",
-    "universal-cookie": "^2.0.7"
+    "universal-cookie": "^2.0.7",
+    "js-beautify": "^1.6.14"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
